Fixed cropping showing scrollbars

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
-canvas {
+#canvas {
+  background-color: black;
+  width: 100%;
+  height: 100%;
   display: block;
 }
